welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: not found: value Buggle
if (Buggle est FaceMur) {
    ^