welcome.lessons.welcome.conditions.Conditions.scala.code
if (Buggle est FaceMur) {
	recule();
}else{
	avance();
}
